index.css
@import "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css";

/*NOTES:
  Primary bg color (white): #fff
  Sub color (turquoise): #92E7FC
  Shaded color (grey, about): #e9f1f5
  body text color: ???
  line color: #8c9396
*/

body {
  /*font-family: monospace; changes margin spacing of site*/
}

/*PRIMARY SECTIONS*/
.about{
  text-align: center;
  padding-top: 5rem;
  background-color: #e9f1f5;
  height: 100vh;
}

.contactSection{
  text-align: center;
  padding-top: 5rem;
  height: 100vh;
  background-color: #e9f1f5;
}

#shortBio {
  text-align: center;
  font-size: 20px;
}

.aboutBio ul, p{
  font-family: 'Karla', sans-serif;
  line-height: 1.5em;
  text-align: justify;
  display:inline-block;
  margin: 1rem 0rem;
  width: 50rem;
}

.aboutBio ul {
  list-style-type: circle;
}

a{
  text-decoration: none;
}

h1{
  font-family: 'Spectral', serif;
  font-weight: bolder;
  display: inline-block;
  margin-top: 2rem;
}

h2{
  font-family: 'Spectral', serif;
  font-weight: bolder;
  display: inline-block;
}

h3 {
  font-family: 'Spectral', serif;
  font-size: 16px;
  font-weight: normal;
  font-style: italic;
  display: inline-block;
}

#main {
  /*width: 50rem;*/
  margin: 0 auto;
}


#ProfilePicImg {
  border-radius: 125px;
  margin-top: 7rem;
  height: 250px;
  width: 250px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  display: inline-block;
}

#introHeader{
  text-align: center;
  height: 100vh;
}

/*NAVIGATION*/

*{transition:all 0.3s ease-in-out;}

/*
:root {
  font-size: 62.5%;
}
*/

#headerLine {
  margin: 0;
  padding: 0;
}

.navBar-container{
  overflow: auto;
}

/*
.navbar-fixed-top.scrolled {
  background-color: #92E7FC;
  transition: background-color 200ms linear;
}
*/

.navbar-fixed-top.scrolled .nav-link {
  color: #fff;
}

.sticky {
 background: #92E7FC;
 position: fixed;
 width: 100%;
 margin-top:-10px;
 transition: background 0.3s ease-in-out;
}

.logoNav img{
  float: left;
  padding: 2.5px, 10px;
  margin-left: 10rem;
  display: inline;
  margin-bottom: 15px;
  margin-top: 25px;
}

.navbar-fixed-top ul a {
  display: inline-block;
  float:left;
  margin: 15px 10px 0px;
  padding: 2.5px 10px;
  z-index: 0;
  cursor: pointer;
  position: relative;
}

.colored {
  color:#92E7FC;
}

.white {
  color: #fff;
}

#mainMenu li{
  display: inline-block;
  float: left;
  font-size: 20px; /*FIND WAY TO CHANGE TO 2rem WITHOUT KILLING THE NAV*/
  font-family: 'Spectral', serif;
  margin-top: 20px;
}

nav ul {
  margin-top: 0;
}

#contactNav{
  margin-right: 10rem;
}

nav a:hover{
  color: black;

}

.links {
  text-decoration: underline;
  color: inherit;
}

.cover-img {
  width: 100%;

}

.IconLinkedin {

}

.IconTwitter {

}

.IconInstagram {

}

.resize {
  width: 25px;
  height: 25px;
  margin: 10%;
}

.Line {
  width: 50rem;
  color: #8c9396;
  width: 6rem;
  border: 1px solid;
}

/*WORK section*/

.workSection {
  text-align: center;
  padding-top: 5rem;
  height: 100vh;
}

ul.research {
  text-align: left;
}
/*
.workSub {
  display: flex;
}

.research {
  flex-wrap: wrap;
}*/

